<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.menu.GameMenu">

    <TextView
        android:id="@+id/tv_title_choice_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_16sdp"
        android:textSize="@dimen/_16sdp"
        android:text="@string/choice_enemy"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/iv_user_vs_user"
        android:paddingTop="@dimen/_24sdp"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_42sdp"
        android:src="@drawable/landing_page1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_title_choice_player" />


    <TextView
        android:id="@+id/tv_user_vs_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_12sdp"
        android:paddingBottom="@dimen/_16sdp"
        tools:text="Name vs User"
        android:text="@string/name_vs_user"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_user_vs_user" />

    <ImageView
        android:id="@+id/iv_user_vs_computer"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/landing_page2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_vs_user" />

    <TextView
        android:id="@+id/tv_user_vs_computer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_12sdp"
        android:paddingBottom="@dimen/_16sdp"
        tools:text="Name vs Computer"
        android:text="@string/name_vs_computer"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_user_vs_computer" />


</androidx.constraintlayout.widget.ConstraintLayout>